Avoid overflow recalc on tables if sections need rebuild

A second go at https://codereview.chromium.org/1901203002. What I really should
have done in that CL is return early if the table sections needed rebuilding.
There are legitimate cases where a table needs layout but may not need to layout
its sections.

BUG=609018

Review-Url: https://codereview.chromium.org/1946413002
Cr-Commit-Position: refs/heads/master@{#394871}

Former-commit-id: 806f45bd9dd5e39cdc20009f2b03bfa9d24566e0